rust/crates/ccusage-core/src/snapshots/csusage_core__summary__tests__snapshots_session_accumulator_latest_metadata_versions_and_timezone.snap
---
source: crates/ccusage-core/src/summary.rs
expression: row
---
{
  "sessionId": "latest-session",
  "projectPath": "/workspace/new",
  "lastActivity": "2026-01-03T01:00:00.000Z",
  "firstActivity": "2026-01-02T01:20:00.000Z",
  "inputTokens": 120,
  "outputTokens": 60,
  "cacheCreationTokens": 10,
  "cacheReadTokens": 5,
  "totalCost": 0.375,
  "credits": null,
  "messageCount": 5,
  "modelsUsed": [
    "gpt-5.2-codex",
    "claude-sonnet-4-20250514"
  ],
  "modelBreakdowns": [
    {
      "modelName": "claude-sonnet-4-20250514",
      "inputTokens": 20,
      "outputTokens": 10,
      "cacheCreationTokens": 0,
      "cacheReadTokens": 0,
      "cost": 0.25
    },
    {
      "modelName": "gpt-5.2-codex",
      "inputTokens": 100,
      "outputTokens": 50,
      "cacheCreationTokens": 10,
      "cacheReadTokens": 5,
      "cost": 0.125
    }
  ],
  "versions": [
    "1.0.0",
    "1.1.0"
  ]
}
